# PromptHangar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
src/: App.tsx  ErrorBoundary.tsx  api.ts  dev-mock.ts  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_outputs.sql  003_tags.sql  004_prompt_sort.sql  005_chains.sql  006_eval_scores.sql  007_branching_envs_tracing.sql  008_multi_run_and_view_prefs.sql  009_git_workspaces.sql  010_compare_mode.sql  011_security.sql
src-tauri/src/: commands.rs  db.rs  error.rs  git.rs  lib.rs  models.rs  security.rs  server.rs
src/components/: ABTestModal.tsx  AnalyticsModal.tsx  BatchEvalPanel.tsx  BottomPanel.tsx  ChainsModal.tsx  ComparisonModal.tsx  CompressorPanel.tsx  DndPromptList.tsx  ExportButton.tsx  FirstRunModal.tsx  FloatingMenu.tsx  FolderTree.tsx  GitSyncMenu.tsx  HelpGuide.tsx  ImportModal.tsx  LockScreen.tsx  MagicCopy.tsx  ManualRunModal.tsx  MarkdownPreview.tsx  OnboardingTour.tsx  PlaygroundPanel.tsx  PromptEditor.tsx  PromptList.tsx  ResizeHandle.tsx  ResultsPanel.tsx  RevisionDiffViewer.tsx  RevisionTimeline.tsx  SearchBar.tsx  SettingsModal.tsx  ShortcutsHelp.tsx  SidePanel.tsx  TagEditor.tsx  Toast.tsx  TracingViewer.tsx  VariablesPanel.tsx  pickers.tsx
src/lib/: compressor.ts  diff.ts  pricing.ts  providers.ts  revisionColors.ts  secrets.ts  semantic.ts
src/lib/__tests__/: compressor.test.ts  pricing.test.ts  secrets.test.ts
