[package]
name = "app"
version = "0.3.0"
description = "PromptHangar — privacy-first prompt engineering workbench"
authors = ["Gores Hamad"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
directories = "5"
parking_lot = "0.12"
rfd = "0.15"
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full", "rt-multi-thread"] }
# Epic 2 — Git sync. `git2` wraps libgit2 so we can init/commit/push locally
# without shelling out. `https` + `vendored-openssl` keeps the build portable.
git2 = { version = "0.20", default-features = false }
# Epic 10 — master password. Argon2id via the PasswordHash PHC string format
# gives us memory-hard hashing with a self-describing output — no manual
# salt/params storage. zeroize wipes the password bytes after use.
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc", "getrandom"] }
zeroize = "1"
